fix/ empty tags, imges on iphones, BASE_URL on all slice, about me layout

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -182,7 +182,7 @@
   @media screen and (max-width: 1024px) {
     gap: 20px;
     &__author-name {
-      text-align: center;
+      text-align: left;
     }
     &__container {
       gap: 20px;
@@ -190,6 +190,11 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+    }
+    &__wrapper {
+      align-items: flex-start;
+      width: 100%;
+      max-width: none;
     }
   }
 }
