--- a/src/components/BigPicture/BigPicture.scss
+++ b/src/components/BigPicture/BigPicture.scss
@@ -22,6 +22,7 @@
   max-height: 100%;
   width: 80vw;
   position: relative;
+  align-self: flex-start;
   cursor: url('../../img/Reduce.svg'), pointer;
 }
 .big-picture__button {
